Kubernetes/task_8/task2/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sv-nginx
spec:
  selector:
    app: nginx
  ports:
  - protocol: TCP
    port: 80
